--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(hw1_wet_boom)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(hw1_wet_boom main.cpp)
+add_executable(hw1_wet_boom main.cpp artist.cpp AVLTree.cpp MusicManager.cpp Song.cpp StreamsList.cpp)
