--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(hw1_wet_boom)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(hw1_wet_boom main.cpp Course.cpp AVLTree.cpp CoursesManager.cpp Song.cpp StreamsList.cpp library.h AllLecturesByTimeKey.cpp)
+add_executable(hw1_wet_boom main.cpp Course.cpp AVLTree.cpp CoursesManager.cpp Song.cpp StreamsList.cpp library.h LectureKey.cpp
+        CourseKey.cpp List.cpp)
