--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(hw1_wet_boom)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(hw1_wet_boom main.cpp AVLTree.cpp CoursesManager.cpp library.h LectureKey.cpp
+add_executable(hw1_wet_boom main.cpp AVLTree.h CoursesManager.cpp library.h LectureKey.cpp
         CourseKey.cpp ArrayList.cpp ArrayList.h library.cpp)
